fix: remove unnecessary endpoints
