# docs/swagger.yaml
@@ -64,59 +64,10 @@ definitions:
         example: status bad request
         type: string
     type: object
-  main.AcceptRequest:
-    properties:
-      plans_ids_id:
-        type: integer
-      tasks_ids_id:
-        type: integer
-    type: object
-  main.AdjustmentResponse:
-    properties:
-      adjusted_plans:
-        items:
-          $ref: '#/definitions/models.SuggestedPlan'
-        type: array
-      message:
-        type: string
-    type: object
-  main.GetDailyPlansRequest:
-    properties:
-      day:
-        type: integer
-    type: object
-  main.GoalResponse:
-    properties:
-      goal:
-        type: string
-      goal_points:
-        type: integer
-    type: object
-  main.OkResponse:
+  httputil.SuccessResponse:
     properties:
       message:
         type: string
-    type: object
-  main.PointsResponse:
-    properties:
-      points:
-        type: integer
-    type: object
-  main.SubmitRequest:
-    properties:
-      day:
-        type: integer
-      total_points:
-        type: integer
-    type: object
-  models.DailyPlansResponse:
-    properties:
-      day:
-        type: integer
-      plans_today:
-        items:
-          $ref: '#/definitions/models.Task'
-        type: array
     type: object
   models.Goal:
     properties:
@@ -171,26 +122,9 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/httputil.HTTPError'
+            $ref: '#/definitions/httputil.SuccessResponse'
       summary: Hello Worldのエンドポイント
-      tags:
-      - hello
   /api/v1/goals:
-    get:
-      consumes:
-      - application/json
-      description: ユーザーの現在の目標を確認する
-      operationId: checkGoal
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/main.GoalResponse'
-      summary: 現在の目標を確認するエンドポイント
-      tags:
-      - goals
     post:
       consumes:
       - application/json
@@ -253,80 +187,6 @@ paths:
       summary: Get plans
       tags:
       - plans
-  /api/v1/plans/accept:
-    post:
-      consumes:
-      - application/json
-      description: ユーザーが提案されたデイリープランを受け入れる
-      operationId: acceptSuggestedPlans
-      parameters:
-      - description: 受け入れリクエストのボディ
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/main.AcceptRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/main.OkResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/httputil.HTTPError'
-      summary: 提案されたデイリープランを受け入れるエンドポイント
-      tags:
-      - plans
-  /api/v1/plans/check:
-    get:
-      consumes:
-      - application/json
-      description: ユーザーのデイリープランが順調かどうかを確認する
-      operationId: checkProgress
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/main.AdjustmentResponse'
-      summary: デイリープランが順調かどうかを確認するエンドポイント
-      tags:
-      - plans
-  /api/v1/plans/submit:
-    post:
-      consumes:
-      - application/json
-      description: ユーザーがデイリータスクデータを提出する
-      operationId: submitDailyTasks
-      parameters:
-      - description: 提出リクエストのボディ
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/main.SubmitRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/main.OkResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/httputil.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/httputil.HTTPError'
-      summary: デイリータスクデータを提出するエンドポイント
-      tags:
-      - submit
   /api/v1/plans/suggested:
     get:
       description: Get a list of suggested plans
@@ -358,49 +218,6 @@ paths:
       summary: Accept suggested plans
       tags:
       - plans
-  /api/v1/plans/today:
-    post:
-      consumes:
-      - application/json
-      description: ユーザーが指定した日のデイリープランを取得する
-      operationId: getDailyPlansOld
-      parameters:
-      - description: 取得する日の番号
-        in: body
-        name: day
-        required: true
-        schema:
-          $ref: '#/definitions/main.GetDailyPlansRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.DailyPlansResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/httputil.HTTPError'
-      summary: 指定された日のデイリープランを取得するエンドポイント
-      tags:
-      - plans
-  /api/v1/points:
-    get:
-      consumes:
-      - application/json
-      description: ユーザーの現在のポイントを取得する
-      operationId: getUserPoints
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/main.PointsResponse'
-      summary: ユーザーのポイントを取得するエンドポイント
-      tags:
-      - points
   /api/v2/goals:
     get:
       consumes:
